# NFM_2021

./: README.md  ramblr.py  requirements.txt
code_abstraction/: BB_Comp.hi  BB_Comp.hs  Clippard.hs  ConfigParser.hi  ConfigParser.hs  Correctness.thy  DataConverter.hs  Makefile  ProgramTransformations.hi  ProgramTransformations.hs  README  RamblrParser.hi  RamblrParser.hs  X86_ACode.hi  X86_ACode.hs  X86_CFG.hi  X86_CFG.hs  X86_Datastructures.hi  X86_Datastructures.hs  X86_Expr.hi  X86_Expr.hs  X86_Symb.hi  X86_Symb.hs  Z3.hi  Z3.hs  code-abstraction.cabal  exec.bash  main.hi  main.hs  stack.yaml
code_abstraction/.stack-work/: stack.sqlite3
code_abstraction/ccr_0/basename/: basename.config  basename_bb_shuf.s
code_abstraction/ccr_0/cat/: cat.s  cat_bb_shuf.s
code_abstraction/ccr_0/chcon/: chcon.config  chcon.s  chcon_bb_shuf.s
code_abstraction/ccr_0/chgrp/: chgrp.config  chgrp.s  chgrp_bb_shuf.s
code_abstraction/ccr_0/chmod/: chmod.config  chmod.s  chmod_bb_shuf.s
code_abstraction/ccr_0/chown/: chown.config  chown.s  chown_bb_shuf.s
code_abstraction/ccr_0/chroot/: chroot.s  chroot_bb_shuf.s
code_abstraction/ccr_0/cksum/: cksum.config  cksum.s  cksum_bb_shuf.s
code_abstraction/ccr_0/comm/: comm.s  comm_bb_shuf.s
code_abstraction/ccr_0/cp/: cp.config  cp.s  cp_bb_shuf.s
code_abstraction/ccr_0/csplit/: csplit.config  csplit.s  csplit_bb_shuf.s
code_abstraction/ccr_0/cut/: cut.s  cut_bb_shuf.s
code_abstraction/ccr_0/date/: date.config  date_bb_shuf.s
code_abstraction/ccr_0/dd/: dd.config  dd.s  dd_bb_shuf.s
code_abstraction/ccr_0/df/: df.config  df.s
code_abstraction/ccr_0/du/: du.s  (+2 more)
code_abstraction/ccr_2/: fix_sections
code_abstraction/nop_2/: fix_sections  utils.txt
code_abstraction/scripts/: ccr_0.txt  ccr_0_results.txt  count.bash  nop_0.txt  nop_0_results.txt  nop_1.txt  nop_1_results.txt  nop_2.txt  nop_2_results.txt  nop_3.txt  nop_3_results.txt  removal.txt  sim.bash
(+3418 files in other folders)
